added content to the page

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>DJ Mixes</title>
 </head>
 <body>
-	<h1>Hello world</h1>
+	<h1>DJ MIXES</h1>
+	<h2><em>Mixed by <strong>Peter Menniti</strong></em></h2>
+	<ul>
+		<li><a href='https://www.soundcloud.com/petermennitirecords/soundcloud-struggle-mix'>Soundcloud Struggle Mix</a></li>
+	</ul>
+
+	<h2>Tracklist:</h2>
+	<ol>
+		<li>Dead Mans Chest - Liquid 94</li>
+		<li>Moresounds - Reality Tune</li>
+		<li>Seba - Jungle Music</li>
+		<li>Sully - Crystal Cuts</li>
+		<li>Origin Unknown - Valley of the Shadows</li>
+		<li>Sully - Helios</li>
+		<li>dBridge x Kabuki x Stray - With U</li>
+		<li>DJ Monita - Luv Ta Luv Ya (Fracture VIP)</li>
+		<li>Zed Bias - Fever</li>
+		<li>Machinedrum, DJ Rashad and Nick Hook - Understand</li>
+		<li>Fracture - Black Pearl</li>
+		<li>Alix Perez - U</li>
+		<li>Sam Binga and Om Unit - 1000 Cats</li>
+		<li>ASC - Ignite</li>
+		<li>Shiken Hanzo - Bushido Code</li>
+		<li>Ruffhouse - The Foot (Loxy and Resound Remix)</li>
+		<li>Pessimist - The Woods</li>
+		<li>Aspect and Gremlinz - Kilo (Ruffhouse Remix)</li>
+		<li>Nasty Habits - Shadowboxin (Om Unit Remix)</li>
+		<li>Total Science - Notes of Blue</li>
+		<li>Hyroglifics - No Drama</li>
+		<li>Fracture - Makin Hype Tracks</li>
+		<li>Sam Binga and Om Unit - Windmill Kick</li>
+		<li>Rockwell - Please Please Please Play This On the Radio</li>
+	</ol>
+
+	<p>Thanks for listening!</p>
+
 </body>
 </html>
