moved the strong tags

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>DJ MIXES</h1>
-	<h2><em>Mixed by <strong>Peter Menniti</strong></em></h2>
+	<h2><em>Mixed by Peter Menniti</em></h2>
 	<ul>
 		<li><a href='https://www.soundcloud.com/petermennitirecords/soundcloud-struggle-mix'>Soundcloud Struggle Mix</a></li>
 	</ul>
@@ -38,7 +38,7 @@
 		<li>Rockwell - Please Please Please Play This On the Radio</li>
 	</ol>
 
-	<p>Thanks for listening!</p>
+	<p><strong>Thanks for listening!</strong></p>
 
 </body>
 </html>
