start of release 2

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -4,9 +4,9 @@
 	<title>Table Practice</title>
 </head>
 <body>
-	<table>
+	<table border=1>
 		<tr>
-			<th></th>
+			<th>&nbsp;</th>
 			<th>A</th>
 			<th>B</th>
 			<th>C</th>
@@ -31,5 +31,10 @@
 		</tr>
 	</table>
 
+	<table border=5>
+		<tr>
+			<td></td>
+		</tr>
+	</table>
 </body>
 </html>
