--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -4,37 +4,50 @@
 	<title>Table Practice</title>
 </head>
 <body>
-	<table border=1>
-		<tr>
-			<th>&nbsp;</th>
-			<th>A</th>
-			<th>B</th>
-			<th>C</th>
-		</tr>
-		<tr>
-			<th>1</th>
-			<td>Empty</td>
-			<td>Empty</td>
-			<td>Empty</td>
-		</tr>
-		<tr>
-			<th>2</th>
-			<td>Empty</td>
-			<td>Empty</td>
-			<td>Battleship</td>
-		</tr>
-		<tr>
-			<th>3</th>
-			<td>Empty</td>
-			<td>Empty</td>
-			<td>Empty</td>
-		</tr>
-	</table>
-
-	<table border=5>
-		<tr>
-			<td></td>
-		</tr>
-	</table>
+	<div>
+		<table border=1>
+			<tr>
+				<th>&nbsp;</th>
+				<th>A</th>
+				<th>B</th>
+				<th>C</th>
+			</tr>
+			<tr>
+				<th>1</th>
+				<td>Empty</td>
+				<td>Empty</td>
+				<td>Empty</td>
+			</tr>
+			<tr>
+				<th>2</th>
+				<td>Empty</td>
+				<td>Empty</td>
+				<td>Battleship</td>
+			</tr>
+			<tr>
+				<th>3</th>
+				<td>Empty</td>
+				<td>Empty</td>
+				<td>Empty</td>
+			</tr>
+		</table>
+	</div>
+	<div>
+		<table>
+			<tr>
+				<td align="center">*</td>
+				<td rowspan="2" colspan="2" align="center">*</td>
+				<td align="center">*</td>
+			</tr>
+			<tr>
+				<td align="center">*</td>
+				<td align="center">*</td>
+			</tr>
+			<tr>
+				<td rowspan="2" colspan="2" align="center">*</td>
+				<td rowspan="2" colspan="2" align="center">*</td>
+			</tr>
+		</table>
+	</div>
 </body>
 </html>
