--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -12,6 +12,22 @@
 		<aside>
 			Trump is secretly an FSB agent.
 		</aside>
+		<table border="1">
+			<tr>
+				<th>Candidate</th>
+				<th colspan="2">Number of Votes</th>
+			</tr>
+			<tr>
+				<td>Donald Trump</td>
+				<td>300 some</td>
+				<td>Winner</td>
+			</tr>
+			<tr>
+				<td>Hillary Clinton</td>
+				<td>250 some</td>
+				<td>Loser</td>
+			</tr>
+		</table>
 	</main>
 	<section>
 		<h3>More news:</h3>
