--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<div>
+	<div id="container">
 		<div id="red"></div>
 		<div id="orange"></div>
 		<div id="yellow"></div>
