--- a/web_dev/jquery/index.html
+++ b/web_dev/jquery/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>DIV Shuffler</title>
+	<script src="http://www.google.com/jsapi" type="text/javascript"></script>
+	<script type="text/javascript">google.load("jquery", "1.3.2");</script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
